fixed clip path issue not showing image in white space, added multiple shoe images

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Montserrat", sans-serif;
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 0.15rem;
+  // font-family: "Alata", sans-serif;
+  // font-family: "Poppins", sans-serif;
 }
 
 code {
